Fix wrapping on committee name

--- a/front/style/_committee.scss
+++ b/front/style/_committee.scss
@@ -12,6 +12,10 @@
         padding: 5px 10px;
     }
 
+    &__name {
+        @include breakword;
+    }
+
     &__host {
         &__nav {
             @include text--body;
@@ -71,7 +75,7 @@
                 width: 100%;
                 height: 80px;
                 padding: 15px;
-            }            
+            }
         }
     }
 
